--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Combat Details
+author=ErikOverflow
+description=Provides details about your current combat opponent
+tags=combat
+plugins=com.combatdetails.CombatDetailsPlugin
